<resources>
    <string name="app_name">RemindR</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="email">E-mail</string>
    <string name="password_again">Jelszó újra</string>
    <string name="cancel">Mégse</string>
    <string name="child">Gyerek</string>
    <string name="adult">Felnőtt</string>
    <string name="guest">Vendég</string>
    <string name="countdown">Visszaszámláló</string>
    <string name="profil">Profil</string>
    <string name="settings">Beállítások</string>
    <string name="logout">Kilépés</string>
    <string name="save">Mentés</string>
    <string name="no_date">Nincs kiválasztva dátum</string>
    <string name="date_pick">Lejárati dátum kiválasztása</string>
    <string name="cost">Ár</string>
    <string name="sub_name">Előfizetés neve</string>
    <string name="new_sub">Új előfizetés</string>
</resources>